// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly with more adults 1`] = `
<Text>
  <Translation
    id="hotels_search.guests.adults"
  />
  <Translation
    passThrough=" 5"
  />
  <Text
    style={
      Object {
        "color": "#bdbdbd",
      }
    }
  >
    <Translation
      passThrough=" ⋅ "
    />
    <Translation
      id="hotels_search.guests.children"
    />
    <Translation
      passThrough=" 0"
    />
  </Text>
</Text>
`;

exports[`renders correctly with more adults and children 1`] = `
<Text>
  <Translation
    id="hotels_search.guests.adults"
  />
  <Translation
    passThrough=" 5"
  />
  <Text
    style={
      Object {
        "color": "#bdbdbd",
      }
    }
  >
    <Translation
      passThrough=" ⋅ "
    />
    <Translation
      id="hotels_search.guests.children"
    />
    <Translation
      passThrough=" 3"
    />
  </Text>
</Text>
`;

exports[`renders correctly with one adult and zero children 1`] = `
<Text>
  <Translation
    id="hotels_search.guests.adults"
  />
  <Translation
    passThrough=" 1"
  />
  <Text
    style={
      Object {
        "color": "#bdbdbd",
      }
    }
  >
    <Translation
      passThrough=" ⋅ "
    />
    <Translation
      id="hotels_search.guests.children"
    />
    <Translation
      passThrough=" 0"
    />
  </Text>
</Text>
`;

exports[`renders correctly with one child and zero adults 1`] = `
<Text>
  <Translation
    id="hotels_search.guests.adults"
  />
  <Translation
    passThrough=" 0"
  />
  <Text
    style={
      Object {
        "color": "#bdbdbd",
      }
    }
  >
    <Translation
      passThrough=" ⋅ "
    />
    <Translation
      id="hotels_search.guests.children"
    />
    <Translation
      passThrough=" 1"
    />
  </Text>
</Text>
`;
